force-app/main/default/objects/OpportunityFieldDefault__mdt/OpportunityFieldDefault__mdt.object-meta.xml
<CustomObject>
    <description>Valores default para campos de texto longo da Opportunity, populados no before insert via trigger.</description>
    <label>Opportunity Field Default</label>
    <pluralLabel>Opportunity Field Defaults</pluralLabel>
</CustomObject>