force-app/main/default/objects/OpportunityFieldDefault__mdt/fields/DefaultValue__c.field-meta.xml
<CustomField>
    <fullName>DefaultValue__c</fullName>
    <label>Default Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>